pipeline/acs/deploy-dev/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: vote-app
    app.kubernetes.io/component: vote-app
    app.kubernetes.io/instance: vote-app
  name: vote-app
  namespace: vote-app-dev
spec:
  selector:
    matchLabels:
      deployment: vote-app
  template:
    metadata:
      labels:
        deployment: vote-app
    spec:
      containers:
      - image: image-registry.openshift-image-registry.svc:5000/vote-app-dev/vote-app@sha256:30cdae6975bf5cae4e6e21bc6f00f9cb201f52a248586b5768cf8e564edd48ea
        name: vote-app
        ports:
        - containerPort: 8080
          protocol: TCP
