pipeline/acs/deploy-dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: vote-app
    app.kubernetes.io/component: vote-app
    app.kubernetes.io/instance: vote-app
  name: vote-app
  namespace: vote-app-dev
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    deployment: vote-app
  sessionAffinity: None
  type: ClusterIP
